--- a/jeoyo/views/join.pug
+++ b/jeoyo/views/join.pug
@@ -8,7 +8,7 @@ block content
         input#join-email(type='email' name='email')
       .input-group
         label(for='join-name') 이름
-        input#join-nick(type='text' name='name')
+        input#join-name(type='text' name='name')
       .input-group
         label(for='join-password') 비밀번호
         input#join-password(type='password' name='password')
